# octopus_agent

./: .env  .gitignore  README.md  pyproject.toml
rag_service/: run.py
rag_service/app/: main.py
rag_service/app/api/: endpoints.py
rag_service/app/core/: rag_service.py
rag_service/app/core/agents/: text2sql.py
rag_service/app/core/llm/: base.py  openai_service.py  transformer_service.py
rag_service/app/core/prompts/: README.md  base.py  manager.py  qa.yaml  templates.py
rag_service/app/core/prompts/templates/base/: chain_of_thought.yaml  few_shot.yaml  self_consistency.yaml  self_critique.yaml
rag_service/app/core/prompts/templates/domains/: .technical.yaml.swp  technical.yaml
rag_service/app/core/prompts/templates/roles/: expert.yaml
rag_service/app/core/prompts/templates/tasks/: classification.yaml  problem_solving.yaml  summarization.yaml  translation.yaml
rag_service/app/core/prompts/ut/: conftest.py  test_base.py  test_manager.py  test_templates.py
rag_service/app/core/utils/: timer.py
rag_service/app/core/vectordb/: base.py  faiss_store.py  milvus_store.py
rag_service/config/: settings.py
